@@ -54,7 +54,7 @@
                             "line2"
                         ],
                         "context_line": "line3",
-                        "in_app": false,
+                        "library_frame": true,
                         "lineno": 3,
                         "module": "App::MyModule",
                         "colno": 4,
@@ -67,7 +67,7 @@
                         "filename": "lib/instrumentation/index.js",
                         "lineno": 102,
                         "function": "instrumented",
-                        "in_app": false,
+                        "library_frame": true,
                         "abs_path": "/Users/watson/code/node_modules/elastic/lib/instrumentation/index.js",
                         "vars": {
                             "key": "value"
@@ -116,7 +116,7 @@
                             "line2"
                         ],
                         "context_line": "line3",
-                        "in_app": false,
+                        "library_frame": true,
                         "lineno": 3,
                         "module": "App::MyModule",
                         "colno": 4,
@@ -129,7 +129,7 @@
                         "filename": "lib/instrumentation/index.js",
                         "lineno": 102,
                         "function": "instrumented",
-                        "in_app": false,
+                        "library_frame": true,
                         "abs_path": "/Users/watson/code/node_modules/elastic/lib/instrumentation/index.js",
                         "vars": {
                             "key": "value"
